--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,33 @@
 services:
-  postgres:
-    container_name: postgres-sql-bsn
-    image: postgres
+  mysql:
+    container_name: my-sql-bsn
+    image: mysql:latest
     environment:
-      POSTGRES_USER: username
-      POSTGRES_PASSWORD: password
-      PGDATA: /var/lib/postgres/data
-      POSTGRES_DB: book_network
+      MYSQL_USER: root
+      MYSQL_PASSWORD: P#1zxcvbnm,./
+      MYSQL_ROOT_PASSWORD: P#1zxcvbnm,./
+      MYSQL_DATABASE: book_network
     volumes:
-      - postgres:/data/postgres
+      - mysql_data:/var/lib/mysql
     ports:
-      - 5432:5432
+      - 3306:3306
     networks:
       - spring-demo
-    restart: unless-stoped
-  
-  mail-div:
-    container_name: mail-dev-dsn
+    restart: unless-stopped
+
+  mail-dev:
+    container_name: mail-dev-bsn
     image: maildev/maildev
     ports:
       - 1080:1080
       - 1025:1025
-
+    networks:
+      - spring-demo
 
 networks:
   spring-demo:
     driver: bridge
 
-
 volumes:
-  postgres:
+  mysql_data:
     driver: local
