--- a/book-network/src/main/resources/application-dev.yml
+++ b/book-network/src/main/resources/application-dev.yml
@@ -44,5 +44,8 @@ application:
   mailing:
     frontend:
       activation-url: http://localhost:4200/activate-account 
+  file:
+    upload:
+      photos-output-path: ./uploads
 server:
   port: 8088
