--- a/book-network-ui/package.json
+++ b/book-network-ui/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "api-gen": "ng-openapi-gen --input ./src/openapi/openapi.json --output ./src/app/services"
+    "api-gen": "ng-openapi-gen --input ./src/openapi/openapi.json --output ./src/app/services",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "angular-code-input": "^2.0.0",
+    "angular-code-input": "^1.6.0",
     "bootstrap": "^5.3.3",
     "ng-openapi-gen": "^0.51.0",
     "rxjs": "~7.8.0",
